<resources>
    <string name="app_name">Dairy To Door</string>
    <string name="dairy_to_door">DAIRY TO DOOR</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="list_of_products">List of products</string>
    <string name="see_offer">See offer</string>
    <string name="order_now">Order Now</string>
    <string name="product_list">Product List</string>
    <string name="my_order">My Order</string>
    <string name="order_history">Order History</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="feedback">Feedback</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="contact_us">contact_us</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="amulmilk">Amul Milk</string>
    <string name="buttermilk">Buttermilk</string>
    <string name="curd">Curd</string>
</resources>
