<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_list_of_products"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/list_of_products" >
            <menu>
                <item
                    android:id="@+id/nav_sub_products_1"
                    android:icon="@drawable/milk"
                    android:title="@string/amulmilk"/>
                <item
                    android:id="@+id/nav_sub_products_2"
                    android:icon="@drawable/milk"
                    android:title="@string/buttermilk"/>
                <item
                    android:id="@+id/nav_sub_products_3"
                    android:icon="@drawable/milk"
                    android:title="@string/curd"/>
            </menu>
        </item>
        <item
            android:id="@+id/nav_see_offer"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/see_offer" />

        <item
            android:id="@+id/nav_order_now"
            android:title="@string/order_now"
            android:icon="@drawable/ic_shopping_cart_black_24dp"/>

    </group>

    <item android:title="Your Account">
        <menu>
            <item
                android:id="@+id/nav_order_history"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="@string/order_history" />
            <item
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_log_in"
                android:title="@string/sign_in" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_logout"
                android:title="@string/sign_out" />
        </menu>
    </item>
    <item android:title="Other">
        <menu>
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us"/>
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"/>
        </menu>
    </item>


</menu>
