<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about_us"
    android:orientation="vertical"
    android:background="@drawable/milk">

    <android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgArraowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/tvContactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_toRightOf="@+id/imgArraowBack"
            android:text="@string/contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.v7.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/dairy_img" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorGrey">

                <TextView
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="We are here to answer any questions you may have about our services.Reach out to us and we will respond as soon as we can."
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorSkyBlue"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgPhone"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_local_phone_black_24dp" />

                        <TextView
                            android:id="@+id/tvPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/imgPhone"
                            android:text="@string/phone"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/tvPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvPhone"
                            android:layout_toRightOf="@+id/imgPhone"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="1234567890"
                            android:textSize="@dimen/_10ssp"

                            />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgEmail"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_email_black_24dp" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/imgEmail"
                            android:text="@string/email"
                            android:textColor="@color/colorWhite"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/tvEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvEmail"
                            android:layout_toRightOf="@+id/imgEmail"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="dhdg.@gmail.com"
                            android:textSize="@dimen/_10ssp"

                            />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgWebsite"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:src="@drawable/ic_language_black_24dp" />

                        <TextView
                            android:id="@+id/tvWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/imgWebsite"
                            android:text="@string/website"
                            android:textColor="@color/colorWhite"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/tvWebName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvWebsite"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/imgWebsite"
                            android:text="http://www.example.com"
                            android:textSize="@dimen/_10ssp"

                            />
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgAddress"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_home_black_24dp" />

                        <TextView
                            android:id="@+id/tvAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/imgAddress"
                            android:text="@string/address"
                            android:textColor="@color/colorWhite"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textSize="@dimen/_15ssp" />

                        <TextView
                            android:id="@+id/tvAddressinfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvAddress"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/imgAddress"
                            android:text="silverwing technology,pakwan cross road"
                            android:textSize="@dimen/_10ssp"

                            />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>


</LinearLayout>